<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/manual_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manual_match"
        android:textSize="20dp" />

    <Button
        android:id="@+id/auto_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_match"
        android:textSize="20dp" />

    <Button
        android:id="@+id/scan_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code"
        android:textSize="20dp"
        android:visibility="gone" />
</LinearLayout>
