<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <RelativeLayout
                android:id="@+id/rl_pressure_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:text="@string/pressure_unit"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/rg_pressure_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bar" />

                    <RadioButton
                        android:id="@+id/rb_psi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/psi" />

                    <RadioButton
                        android:id="@+id/rb_kpa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/kpa" />
                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:text="@string/trip_warning_limit"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_trip_warning_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:text="25"
                    android:textSize="20dp" />
            </RelativeLayout>


            <SeekBar
                android:id="@+id/sb_trip_warning_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginRight="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:text="@string/trip_lower_warning_limit"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_trip_lower_warning_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:text="25"
                    android:textSize="20dp" />
            </RelativeLayout>


            <SeekBar
                android:id="@+id/sb_trip_lower_warning_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginRight="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="10dp"
                    android:text="@string/temp_unit"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/rg_temperature_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_celsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="°C" />

                    <RadioButton
                        android:id="@+id/rb_fahrenheit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="°F" />
                </RadioGroup>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:text="@string/temp_alarm_limit"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_temperature_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:text="35℃"
                    android:textSize="20dp" />
            </RelativeLayout>


            <SeekBar
                android:id="@+id/sb_temperature_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginRight="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:id="@+id/ll_request_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/request_data_frequency"
                    android:textSize="20dp" />

                <NumberPicker
                    android:id="@+id/number_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"></NumberPicker>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color" />

            <Button
                android:id="@+id/btn_reset_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restore_system_settings"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
